:dizzy: update splash and icon

--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
-    "name": "moodme-application",
-    "slug": "moodme-application",
+    "name": "MoodMe",
+    "slug": "MoodMe",
     "version": "1.0.0",
     "orientation": "portrait",
+    "userInterfaceStyle": "dark",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -20,10 +21,7 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+      "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
       "favicon": "./assets/favicon.png"
