--- a/package.json
+++ b/package.json
@@ -8,27 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~39.0.2",
-    "expo-camera": "~9.0.0",
-    "expo-face-detector": "~8.3.0",
-    "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-native-fontawesome": "^0.2.6",
-    "react-native-svg": "12.1.0"
+    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@tensorflow/tfjs": "^2.8.3",
+    "@tensorflow/tfjs-react-native": "^0.5.0",
+    "expo": "~39.0.2",
+    "expo-camera": "~9.0.0",
+    "expo-face-detector": "~8.3.0",
+    "expo-gl": "~9.1.1",
+    "expo-gl-cpp": "~9.1.2",
+    "expo-status-bar": "~1.0.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-fs": "^2.16.6",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "typescript": "~3.9.5",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^5.16.0 || ^6.8.0 || ^7.2.0",
@@ -41,7 +46,8 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-react-native": "^3.10.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "typescript": "~3.9.5"
   },
   "private": true
 }
