:construction: change app architecture

--- a/.eslintrc
+++ b/.eslintrc
@@ -60,7 +60,7 @@
             "position": "before"
           },
           {
-            "pattern": "@moodme/views/**",
+            "pattern": "@moodme/assets/**",
             "group": "internal",
             "position": "before"
           },
@@ -70,12 +70,17 @@
             "position": "before"
           },
           {
+            "pattern": "@moodme/constants/**",
+            "group": "internal",
+            "position": "before"
+          },
+          {
             "pattern": "@moodme/services/**",
             "group": "internal",
             "position": "before"
           },
           {
-            "pattern": "@moodme/constants/**",
+            "pattern": "@moodme/views/**",
             "group": "internal",
             "position": "before"
           }
