--- a/app.json
+++ b/app.json
@@ -4,7 +4,6 @@
     "slug": "MoodMe",
     "version": "1.0.0",
     "orientation": "portrait",
-    "userInterfaceStyle": "dark",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -18,9 +17,11 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.moodme",
       "supportsTablet": true
     },
     "android": {
+      "package": "com.moodme",
       "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
