--- a/package.json
+++ b/package.json
@@ -5,32 +5,49 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "yarn lint --fix",
+    "typecheck": "tsc --project . --noEmit --pretty --skipLibCheck"
   },
   "dependencies": {
+    "@babel/core": "~7.9.0",
+    "@expo/vector-icons": "^10.2.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-native-fontawesome": "^0.2.6",
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.2",
+    "@rematch/core": "^2.0.0-next.5",
+    "@rematch/persist": "^1.1.6",
     "@tensorflow/tfjs": "^2.8.3",
     "@tensorflow/tfjs-react-native": "^0.5.0",
+    "@types/react-redux": "^7.1.16",
     "expo": "~39.0.2",
+    "expo-asset": "~8.2.0",
     "expo-camera": "~9.0.0",
+    "expo-constants": "~9.2.0",
     "expo-face-detector": "~8.3.0",
     "expo-gl": "~9.1.1",
     "expo-gl-cpp": "~9.1.2",
+    "expo-haptics": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-fs": "^2.16.6",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.13.12"
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
@@ -47,7 +64,8 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-react-native": "^3.10.0",
     "prettier": "^2.1.2",
-    "typescript": "~3.9.5"
+    "react-native-web": "~0.13.7",
+    "typescript": "^4.1.0-beta"
   },
   "private": true
 }
